# KW_4_ParsingAndProcessingOfVacancies

./: .gitignore  README.md  main.py  pyproject.toml
src/: job_site_api.py  main.py  user_func.py  vacancies.csv  vacancies.json  vacancies.py  working_with_file_of_vacancies.py  working_with_json_file.py
tests/: test_vacancies.py
