[tool.poetry]
name = "kw-4-parsingandprocessingofvacancies"
version = "0.1.0"
description = ""
authors = ["ZhenyaKasatkina <knopisha.zh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
